ref: made new logo name

--- a/PR.html
+++ b/PR.html
@@ -4,32 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phantom Rigz</title>
-    <link rel="stylesheet" href="PR.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Micro+5&display=swap" rel="stylesheet">
-    <style>
-        canvas { 
-            width: 100%; 
-            height: 100%; 
-        }
-
-        body { 
-            margin: 0; 
-            background: #000f1d;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <header class="header">
-            <h1 class="title micro-5-regular" id="animated-heading">PhantomRigz</h1>
-            <h2 class="about micro-5-regular"
-            id="animated-heading">BUILT YOUR DREAM PC HERE</h2>
-        </header>
+        <div class="heading-wrapper">
+            <h1 class="title">PHANTOM<span class="skull">☠</span>RIGZ</h1>
+            <h2 class="subtitle">Build Your Dream PC Here</h2>
+        </div>
     </div>
-
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="skull_animation.js"></script> -->
+    <script src="script.js"></script>
 </body>
 </html>
