--- a/PR.html
+++ b/PR.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phantom Rigz</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="PR.css">
 </head>
 <body>
     <div class="container">
@@ -13,6 +13,6 @@
             <h2 class="subtitle">Build Your Dream PC Here</h2>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="PR.js"></script>
 </body>
 </html>
